test/modules/errors/call-imported-module.chpl
module Program {
  module M { }
  import Program.M;
  M(20);
}
